--- a/Welcome.html
+++ b/Welcome.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-    <head><h1>Welcome to HTML</h1></head>
+    <head><h1>Welcome to HTML</h1>
+    <link rel="stylesheet" link="Welcome.css">
+    </head>
     <body>
         <h1>Heading 1 tag</h1>
         <h2>Heading 2 tag</h2>
